--- a/src/_includes/partials/search.njk
+++ b/src/_includes/partials/search.njk
@@ -1,6 +1,6 @@
 <div class="absolute z-[70] h-0 w-full inset-x-0 grid grid-cols-combi" x-bind:class="searchOpen ? 'opacity-0 animate-dropdown' : 'hidden'" x-bind:aria-hidden="!searchOpen" x-bind:hidden="!searchOpen" hidden >
 
-<div class="max-w-3xl pt-6 pb-12 ml-auto bg-white md:px-8 w-stretch rounded-b-xl col-full px-page sm:col-container">
+<div class="pt-6 pb-12 ml-auto bg-white md:max-w-3xl md:px-8 w-stretch rounded-b-xl col-full px-page md:col-container">
 
   {# Søk #}
   <form class="" action="/sok/">
