--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -28,8 +28,8 @@
     {%- block styles -%}{%- endblock -%}
   </head>
   <body
-    class="min-h-full text-fluid-18-20 leading-relaxed overflow-x-hidden overflow-y-scroll {{ bodyClass }}" 
-    x-data="{ indexOpen: false, audienceDropdownOpen: false, languageDropdownOpen: false, menuOpen: false, searchOpen: false, newNotifications: true, overlayOpen: false, tocOpen: false, tocFixed: false, tocExpandAll: false }"
+    x-data="{ audienceDropdownOpen: false, menuOpen: false, searchOpen: false, overlayOpen: false, tocOpen: false, tocFixed: false, tocExpandAll: false }"
+    class="min-h-full text-fluid-18-20 leading-relaxed overflow-x-hidden  {{ bodyClass }}" 
   >
 
     {%- include "partials/header.njk" -%}
