--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -31,12 +31,12 @@
     {% block quicklinks %}{% endblock %}
 
     {# Innholdsfortegnelse sticky #}
-    <div class="lg:row-span-4 lg:sticky bg-white lg:row-start-2 xl:row-start-2 lg:top-0 col-toc max-h-[99svh] overflow-auto toc" id="toc" x-intersect:leave.margin.-120px.0.0.0="tocFixed = true" x-intersect:enter.margin.0.0.0.0="tocFixed = false, tocOpen = false">
+    <div class="lg:row-span-4 lg:sticky bg-white lg:row-start-2 xl:row-start-2 lg:top-0 col-toc max-h-[99svh] overflow-auto toc px-4" id="toc" x-intersect:leave.margin.-120px.0.0.0="tocFixed = true" x-intersect:enter.margin.0.0.0.0="tocFixed = false, tocOpen = false">
       <h2 class="flex items-baseline sticky z-10 lg:bg-white top-0 py-2 font-semibold gap-x-0.5 text-fluid-18-20">
-        <a href="#toppen">{{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-1') | safe  }}</a>
+        <a href="#toppen">{{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-0.5') | safe  }}</a>
         <span>Innhold på siden</span>
       </h2>
-        <ul class="pr-6 mb-8 ml-1.5 border-l-2 text-fluid-16-18/normal opacity-90 border-slate-300">
+        <ul class="pr-6 mb-8 ml-2 border-l-2 text-fluid-16-18/normal opacity-90 border-slate-300">
         {% for chapter in chapters %}
         {% set chapterIndex = loop.index %}
         <li class="not-first:mt-1">
@@ -61,63 +61,49 @@
 
     {# Innholdsfortegnelse fixed #}
     <div 
-      class="fixed inset-x-0 top-0 z-50 max-h-full overflow-y-auto bg-white border-b shadow grid-cols-article lg:hidden border-slate-300 overscroll-y-contain" x-show="tocFixed" 
-      x-transition:enter="transition ease-out duration-100"
-      x-transition:enter-start="opacity-0 -translate-y-3"
+      class="fixed inset-x-0 top-0 z-50 grid grid-cols-article lg:hidden" x-show="tocFixed" 
+      x-transition:enter="transition ease-out duration-200"
+      x-transition:enter-start="opacity-0 -translate-y-6"
       x-transition:enter-end="opacity-100 translate-y-0"
-      x-transition:leave="transition ease-in duration-100"
+      x-transition:leave="transition ease-in duration-200"
       x-transition:leave-start="opacity-100 translate-y-0"
-      x-transition:leave-end="opacity-0 -translate-y-3"
+      x-transition:leave-end="opacity-0 -translate-y-6"
     >
-        <button type="button" class="sticky top-0 z-10 grid w-full py-3 font-semibold bg-white cursor-pointer grid-cols-article text-fluid-18-20 hover:bg-amber-100" x-on:click="tocOpen = !tocOpen">
-          <span class="flex items-center col-main">
-          {{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 -translate-y-0.5 -translate-x-1') | safe  }}</a>
+      <div class="bg-white rounded-b-xl col-main overflow-clip" x-bind:class="tocOpen || 'ring-white ring-2'">
+        <button type="button" class="flex items-center w-full gap-1 px-4 py-3 font-semibold text-blue-600 cursor-pointer rounded-b-xl bg-blue-50 text-fluid-18-20 hover:bg-blue-100" x-on:click="tocOpen = !tocOpen">
+          {{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 -translate-y-0.5 -translate-x-[3px]') | safe  }}</a>
           <span>Innhold på siden</span>
-          <span class="-translate-y-0.5 ml-auto" x-bind:class="tocOpen && 'rotate-180'">
+          <span class="-translate-y-0.5 ml-auto" x-bind:class="tocOpen && 'rotate-180 transition-transform duration-200'">
           {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('') | safe }}</span>
-          </span>
         </button>
-        <div x-show="tocOpen" class="grid grid-cols-article">
-          <div class="col-main">
-            <ul class="pr-6 ml-1.5 mt-2 border-l-2 text-fluid-16-18/normal opacity-90 border-slate-300">
-              {% for chapter in chapters %}
-              {% set chapterIndex = loop.index %}
-              <li class="not-first:mt-1">
-                <a class="block px-1 border-l-2 py-1.5 pl-4 -ml-0.5 underline hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 rounded-r-md hover:decoration-blue-700 toc-item" x-bind:class="(chapterIndex == {{ chapterIndex }}) ? 'border-deepblue-600 bg-deepblue-100/50' : 'border-transparent'" href="#{{ chapter.data.title | slugify }}" x-on:click="tocOpen = false">
-                  {{ chapter.data.title }}
-                </a>
-                {% if (chapter.templateContent | tocData).length >= 2 %}           
-                <ul class="hidden my-1.5 ml-8 mb-6" x-bind:class="{ 'hidden' : ((chapterIndex != {{ chapterIndex }}) && !tocExpandAll) || !tocFixed }">
-                  {% for item in chapter.templateContent | tocData %}
-                  <li class="not-first:mt-1">
-                    <a class="inline-block p-1 underline hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}" x-on:click="tocOpen = false">
-                      <span>{{ item.text }}</span>
-                    </a>
-                  </li>
-                  {% endfor %}
-                </ul>
-                {% endif %}
-              </li>
-              {% endfor %}
-            </ul>
-            <div class="sticky bottom-0 py-4">
-              <div class="z-30 h-3 pointer-events-none bg-gradient-to-t from-white to-transparent"></div>
-              <button type="button" x-on:click="tocExpandAll = !tocExpandAll" class="py-1.5 text-fluid-16-18 -ml-4 pl-3 pr-5 bg-slate-100 outline-2 outline-white border-slate-300 rounded-full -translate-x-0.5 cursor-pointer ">
-                <template x-if="!tocExpandAll">
-                  <span class="flex items-center gap-1.5">
-                    {{ '/src/_includes/svg/icons/chevron-up-down.svg' | svgContents('w-6 h-6') | safe }}
-                    <span>Bytt til detaljert innholdsfortegnelse</span>
-                  </span>
-                </template>
-                <template x-if="tocExpandAll">
-                  <span class="flex items-center gap-1.5">
-                    {{ '/src/_includes/svg/icons/chevron-down-up.svg' | svgContents('w-6 h-6') | safe }}
-                    <span>Bytt til fokusert innholdsfortegnelse</span>
-                  </span>
-                </template>
-              </button>
-            </div>
-          </div>
+        <div x-show="tocOpen" class="grid h-[10lh] pt-2 overflow-y-auto overscroll-y-contain px-6" style="scrollbar-width: none">
+          <ul class="pr-6 border-l-2 text-fluid-16-18/normal border-slate-300">
+            {% for chapter in chapters %}
+            {% set chapterIndex = loop.index %}
+            <li class="not-first:mt-1">
+              <a class="inline-block border-l-2 py-1.5 pl-4 pr-8 -ml-0.5 underline hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 rounded-r-md hover:decoration-blue-700 toc-item" x-bind:class="(chapterIndex == {{ chapterIndex }}) ? 'border-deepblue-600 bg-deepblue-100/50' : 'border-transparent'" href="#{{ chapter.data.title | slugify }}" x-on:click="tocOpen = false">
+                {{ chapter.data.title }}
+              </a>
+              {% if (chapter.templateContent | tocData).length >= 2 %}           
+              <ul class="hidden my-1.5 ml-8 mb-2" x-bind:class="{ 'hidden' : ((chapterIndex != {{ chapterIndex }}) && !tocExpandAll) || !tocFixed }">
+                {% for item in chapter.templateContent | tocData %}
+                <li class="not-first:mt-1">
+                  <a class="inline-block p-1 underline hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}" x-on:click="tocOpen = false">
+                    <span>{{ item.text }}</span>
+                  </a>
+                </li>
+                {% endfor %}
+              </ul>
+              {% endif %}
+            </li>
+            {% endfor %}
+          </ul>
+
+          <a class="inline-flex items-center gap-1 px-1.5 mt-6 -ml-4 underline text-fluid-16-18 hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" x-on:click="tocOpen = false" href="#toppen">
+            {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('w-6 h-6 -translate-x-px') | safe }}
+            <span>Til toppen av siden</span>
+          </a>
+          <div class="sticky inset-x-0 bottom-0 z-30 h-6 mt-auto pointer-events-none bg-gradient-to-t from-white via-white/75 to-transparent"></div>
         </div>
       </div>
     </div>
@@ -126,7 +112,7 @@
     {# Innhold #}
     {% for chapter in chapters %}
       {% set chapterIndex = loop.index %}
-      <section class="mb-16 prose col-main toc-chapter" id="{{ chapter.data.title | slugify }}" x-intersect.margin.-30%.0%.-30%.0%="chapterIndex = {{ chapterIndex }}" style="--is: --chapter-{{ loop.index }}">
+      <section class="mb-16 prose col-main toc-chapter" id="{{ chapter.data.title | slugify }}" x-intersect.margin.-5%.0%.-30%.0%="chapterIndex = {{ chapterIndex }}" style="--is: --chapter-{{ loop.index }}">
         <div class="w-10 h-[0.625ch] bg-deepblue-200 mt-8"></div>
         <h2 class="mt-5 mb-4 -translate-x-0.5 font-semibold text-fluid-32-36/tight text-balance">
           <a href="#{{ chapter.data.title | slugify }}">
@@ -146,4 +132,3 @@
   {% include "partials/kontakt.njk" %}
 
 {%- endblock -%}
-
