Litt høyere TOC

--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -80,7 +80,7 @@
 
 {# Overlay #}
 <button 
-  class="fixed inset-0 z-10 w-full h-full cursor-default bg-gray-400/25 backdrop-blur-xs" 
+  class="fixed inset-0 z-10 w-full h-full cursor-default bg-gray-400/25" 
   type="button"
   x-show="(menuOpen || searchOpen || tocOpen)" 
   x-on:click="menuOpen = false, searchOpen = false, tocOpen = false" 
