--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="no" class="h-full font-sans bg-white scroll-pt-16">
+<html lang="no" class="h-full font-sans bg-white scroll-pt-16 scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="robots" content="noindex" />
