Egen JS for TOC highlight 🧐
Fremfor Alpine.JS plugin

--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -40,14 +40,14 @@
         {% for chapter in chapters %}
         {% set chapterIndex = loop.index %}
         <li class="not-first:mt-1">
-          <a class="inline-block px-1 py-1.5 pl-4 pr-8 border-l-2 -ml-0.5 underline border-transparent hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 hover:decoration-blue-700 rounded-r-md toc-item" href="#{{ chapter.data.title | slugify }}" x-on:click="tocOpen = false" x-bind:class="(chapterIndex == {{ chapterIndex }}) && 'lg:border-deepblue-600 lg:bg-deepblue-100/50'">
+          <a class="inline-block py-1.5 pl-4 pr-8 border-l-2 -ml-0.5 underline border-transparent hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 hover:decoration-blue-700 toc-item" href="#{{ chapter.data.title | slugify }}" x-on:click="tocOpen = false">
             {{ chapter.data.title }}
           </a>
           {% if (chapter.templateContent | tocData).length >= 2 %}           
-          <ul class="hidden my-1.5 ml-8 mb-6" x-bind:class="{ 'lg:block' : chapterIndex == {{ chapterIndex }} }">
+          <ul class="hidden" x-bind:class="{ 'lg:block' : chapterIndex == {{ chapterIndex }} }">
             {% for item in chapter.templateContent | tocData %}
-            <li class="not-first:mt-1">
-              <a class="inline-block p-1 underline hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}" x-on:click="tocOpen = false">
+            <li>
+              <a class="inline-block py-1.5 pr-6 pl-8 underline border-l-2 -ml-0.5 border-transparent hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}" x-on:click="tocOpen = false">
                 <span>{{ item.text }}</span>
               </a>
             </li>
@@ -76,8 +76,8 @@
           <span class="-translate-y-0.5 ml-auto" x-bind:class="tocOpen && 'rotate-180 transition-transform duration-200'">
           {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('') | safe }}</span>
         </button>
-        <div x-show="tocOpen" class="h-[13lh] pt-2 overflow-y-auto overscroll-y-contain px-6" style="scrollbar-width: none">
-          <ul class="pr-6 border-l-2 text-fluid-16-18/normal border-slate-300">
+        <div x-show="tocOpen" class="h-[13lh] pt-2 overflow-y-auto overscroll-y-contain" style="scrollbar-color:var(--color-slate-400) #0000">
+          <ul class="pr-6 mx-6 border-l-2 text-fluid-16-18/normal border-slate-300">
             {% for chapter in chapters %}
             {% set chapterIndex = loop.index %}
             <li class="not-first:mt-1">
@@ -98,12 +98,10 @@
             </li>
             {% endfor %}
           </ul>
-
-          <a class="inline-flex items-center gap-1 px-1.5 mt-6 -ml-4 underline text-fluid-16-18 hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" x-on:click="tocOpen = false" href="#toppen">
-            {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('w-6 h-6 -translate-x-px') | safe }}
+          <a class="inline-flex items-center gap-1 px-1.5 mt-6 ml-2 underline text-fluid-16-18 hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" x-on:click="tocOpen = false" href="#toppen">
+            {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('w-6 h-6') | safe }}
             <span>Til toppen av siden</span>
           </a>
-          <div class="sticky inset-x-0 bottom-0 z-30 h-6 mt-auto pointer-events-none bg-gradient-to-t from-white via-white/75 to-transparent"></div>
         </div>
       </div>
     </div>
@@ -115,7 +113,7 @@
       {% set chapterIndex = loop.index %}
       <section class="mb-16 prose col-main toc-chapter" id="{{ chapter.data.title | slugify }}" x-intersect.margin.-5%.0%.-30%.0%="chapterIndex = {{ chapterIndex }}" style="--is: --chapter-{{ loop.index }}">
         <div class="w-10 h-[0.625ch] bg-deepblue-200 mt-8"></div>
-        <h2 class="mt-5 mb-4 -translate-x-0.5 font-semibold text-fluid-32-36/tight text-balance">
+        <h2 class="mt-5 mb-4 -translate-x-0.5 font-bold text-fluid-32-36/tight text-balance" id="{{ chapter.data.title | slugify }}">
           <a href="#{{ chapter.data.title | slugify }}">
             <span>{{ chapter.data.title }}</span>
           </a>
@@ -135,3 +133,34 @@
   {% include "partials/kontakt.njk" %}
 
 {%- endblock -%}
+
+
+{% block bodyscript %}
+  <script>
+      const headings = Array.from(document.querySelectorAll('main h2, main h3')).filter((heading) => heading.id != '');
+      const toc = document.getElementById('toc');
+
+      const highlight = (item, headingId) => {
+
+      }
+
+      let observer = new IntersectionObserver(
+        (entries, observer) => {
+          entries.forEach((entry) => {
+            const id = entry.target.id;
+            if (entry.isIntersecting) {
+              toc.querySelector(`a[href="#${id}"]`).classList.add('tocHighlight')
+            } else {
+              toc.querySelector(`a[href="#${id}"]`).classList.remove('tocHighlight')
+            }
+          })
+        }, { 
+          rootMargin: '75% 0px -25% 0px',
+          threshold: 1.0
+        }
+      );
+      headings.forEach((heading) => {
+        observer.observe(heading);
+      })
+  </script>
+{% endblock %}
