--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -572,6 +572,11 @@
     background-color: var(--color-slate-400);
     border-radius: 6px;
   }
+
+  .tocHighlight {
+    border-color: var(--color-deepblue-600) !important;
+    background-color: var(--color-deepblue-50);
+  }
 }
 
 @utility grid-cols-combi {
