--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -31,23 +31,23 @@
     {% block quicklinks %}{% endblock %}
 
     {# Innholdsfortegnelse sticky #}
-    <div class="lg:row-span-4 lg:sticky bg-white lg:row-start-2 xl:row-start-2 lg:top-0 col-toc max-h-[99svh] overflow-auto toc px-4 pt-3 pb-6 mb-4" id="toc" x-intersect:leave.margin.-100px.0.0.0="tocFixed = true" x-intersect:enter.margin.0.0.0.0="tocFixed = false, tocOpen = false">
+    <div class="lg:row-span-4 lg:sticky bg-white lg:row-start-2 xl:row-start-2 lg:top-0 col-toc max-h-[99svh] overflow-auto toc px-4 lg:pr-0 pt-3 pb-6 mb-4" id="toc" x-intersect:leave.margin.-100px.0.0.0="tocFixed = true" x-intersect:enter.margin.0.0.0.0="tocFixed = false, tocOpen = false">
       <h2 class="flex items-baseline sticky z-10 lg:bg-white top-0 py-2 font-semibold gap-x-0.5 text-fluid-18-20">
         <a href="#toppen">{{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-0.5') | safe  }}</a>
         <span>Innhold på siden</span>
       </h2>
-      <ul class="pr-6 ml-2 border-l-2 lg:text-fluid-16-18/normal opacity-90 border-slate-300">
+      <ul class="ml-2 border-l-2 lg:text-fluid-16-18/normal border-slate-300">
         {% for chapter in chapters %}
         {% set chapterIndex = loop.index %}
         <li>
-          <a class="inline-block py-1.5 pl-4 pr-8 border-l-2 -ml-0.5 underline border-transparent hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 hover:decoration-blue-700 toc-item" href="#{{ chapter.data.title | slugify }}" x-on:click="tocOpen = false">
+          <a class="inline-block py-1.5 pl-4 pr-8 border-l-2 -ml-0.5 underline border-transparent hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 hover:decoration-blue-700 text-deepblue-900 toc-item" href="#{{ chapter.data.title | slugify }}" x-on:click="tocOpen = false" x-bind:class="(chapterIndex == {{ chapterIndex }}) && 'tocHighlight !border-deepblue-600'">
             {{ chapter.data.title }}
           </a>
           {% if (chapter.templateContent | tocData).length >= 2 %}           
           <ul class="hidden" x-bind:class="{ 'lg:block' : chapterIndex == {{ chapterIndex }} }">
             {% for item in chapter.templateContent | tocData %}
             <li>
-              <a class="inline-block py-1.5 pr-6 pl-8 underline border-l-2 -ml-0.5 border-transparent hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}" x-on:click="tocOpen = false">
+              <a class="inline-block py-1.5 pr-6 pl-8 underline border-l-2 -ml-0.5 border-transparent text-deepblue-900 hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}" x-on:click="tocOpen = false">
                 <span>{{ item.text }}</span>
               </a>
             </li>
@@ -81,7 +81,7 @@
             {% for chapter in chapters %}
             {% set chapterIndex = loop.index %}
             <li class="not-first:mt-1">
-              <a class="inline-block border-l-2 py-1.5 pl-4 pr-8 -ml-0.5 underline hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 rounded-r-md hover:decoration-blue-700 toc-item" x-bind:class="(chapterIndex == {{ chapterIndex }}) ? 'border-deepblue-600 bg-deepblue-100/50' : 'border-transparent'" href="#{{ chapter.data.title | slugify }}" x-on:click="tocOpen = false">
+              <a class="inline-block border-l-2 py-1.5 pl-4 pr-8 -ml-0.5 underline hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 rounded-r-md hover:decoration-blue-700 toc-item" x-bind:class="(chapterIndex == {{ chapterIndex }}) ? 'bg-deepblue-100/50' : 'border-transparent'" href="#{{ chapter.data.title | slugify }}" x-on:click="tocOpen = false">
                 {{ chapter.data.title }}
               </a>
               {% if (chapter.templateContent | tocData).length >= 2 %}           
@@ -111,7 +111,7 @@
     {# Innhold #}
     {% for chapter in chapters %}
       {% set chapterIndex = loop.index %}
-      <section class="mb-16 prose col-main toc-chapter" id="{{ chapter.data.title | slugify }}" x-intersect.margin.-5%.0%.-30%.0%="chapterIndex = {{ chapterIndex }}" style="--is: --chapter-{{ loop.index }}">
+      <section class="mb-16 prose col-main toc-chapter" id="{{ chapter.data.title | slugify }}" x-intersect.margin.-5%.0%.-10%.0%="chapterIndex = {{ chapterIndex }}">
         <div class="w-10 h-[0.625ch] bg-deepblue-200 mt-8"></div>
         <h2 class="mt-5 mb-4 -translate-x-0.5 font-bold text-fluid-32-36/tight text-balance" id="{{ chapter.data.title | slugify }}">
           <a href="#{{ chapter.data.title | slugify }}">
@@ -155,7 +155,7 @@
             }
           })
         }, { 
-          rootMargin: '75% 0px -25% 0px',
+          rootMargin: '0px 0px -25% 0px',
           threshold: 1.0
         }
       );
